add section offers

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/style.css">
   <title>Lagoona</title>
 </head>
@@ -51,6 +52,34 @@
       </div>
     </div>
   </header>
+
+  <main>
+    <!-- Секция Спецпредложения -->
+    <section class="offers">
+      <div class="container">
+        <h2 class="section-title">Спецпредложения</h2>
+        <div class="offers-container">
+          <div class="offers-left">
+            <article class="offer-article offer-small-1">
+              <h3 class="offer-article-title">Мальдивские острова</h3>
+              <p class="offer-description"> от 55 000 р</p>
+              <a href="offer-link">Подробнее</a>
+            </article>
+            <article class="offer-article offer-small-2">
+              <h3 class="offer-article-title">Горящий тур на остров Крит</h3>
+              <p class="offer-description">от 30 000 р</p>
+              <a href="offer-link">Подробнее</a>
+            </article>
+          </div>
+          <article class="offer-large">
+            <h3 class="offer-article-title">Номера категории люкс</h3>
+            <p class="offer-description">от 5000 р</p>
+            <a href="offer-link">Подробнее</a>
+          </article>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
