add section about-us

--- a/index.html
+++ b/index.html
@@ -61,22 +61,72 @@
         <div class="offers-container">
           <div class="offers-left">
             <article class="offer-article offer-small-1">
-              <h3 class="offer-article-title">Мальдивские острова</h3>
-              <p class="offer-description"> от 55 000 р</p>
-              <a href="offer-link">Подробнее</a>
+              <div class="offer-description-container">
+                <h3 class="offer-article-title">Мальдивские острова</h3>
+                <p class="offer-description"> от 55 000 р</p>
+                <a class="offer-link" href="#">Подробнее</a>
+              </div>
             </article>
             <article class="offer-article offer-small-2">
-              <h3 class="offer-article-title">Горящий тур на остров Крит</h3>
-              <p class="offer-description">от 30 000 р</p>
-              <a href="offer-link">Подробнее</a>
+              <div class="offer-description-container">
+                <h3 class="offer-article-title">Горящий тур на остров Крит</h3>
+                <p class="offer-description">от 30 000 р</p>
+                <a class="offer-link" href="#">Подробнее</a>
+              </div>
             </article>
           </div>
           <article class="offer-large">
-            <h3 class="offer-article-title">Номера категории люкс</h3>
-            <p class="offer-description">от 5000 р</p>
-            <a href="offer-link">Подробнее</a>
+            <div class="offer-description-container">
+              <h3 class="offer-title-big">Номера категории люкс</h3>
+              <p class="offer-description description-large">от 5000 р</p>
+              <a class="offer-link" href="#">Подробнее</a>
+            </div>
           </article>
         </div>
+      </div>
+    </section>
+
+    <!-- Секция о нас -->
+    <section class="about-us">
+      <div class="container">
+        <h2 class="section-title">О нас</h2>
+        <p class="description about-us-description">
+          Идейные соображения высшего порядка, а также сложившаяся структура
+          организации влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует
+          насущным потребностям. Идейные соображения высшего порядка, а также дальнейшее развитие различных форм
+          деятельности представляет собой интересный эксперимент проверки системы обучения кадров, соответствует
+          насущным потребностям. Равным образом сложившаяся структура организации требуют определения и уточнения
+          существенных финансовых и административных условий.
+        </p>
+      </div>
+    </section>
+
+    <!-- Секция Услуги -->
+    <section class="services">
+      <div class="container">
+        <h2 class="section-title">Услуги</h2>
+        <ul class="services-list">
+          <li class="services-list-item services-item-first">
+            <a class="services-item-link" href="#">Эксклюзивное обслуживание</a>
+            <p class="description services-item-description">Равным образом постоянный количественный рост и сфера нашей
+              активности</p>
+          </li>
+          <li class="services-list-item services-item-second">
+            <a class="services-item-link" href="#">Аренда банкетныз залов</a>
+            <p class="description services-item-description">Значимость этих проблем настолько очевидна, что дальнейшее
+              развитие различных форм.</p>
+          </li>
+          <li class="services-list-item services-item-third">
+            <a class="services-item-link" href="#">Сауны, бассейны, бани, фитнес-залы</a>
+            <p class="description services-item-description">Не следует, однако забывать, что начало повседневной работы
+              по формированию позиции</p>
+          </li>
+          <li class="services-list-item services-item-fourth">
+            <a class="services-item-link" href="#">Охраняемые автомобильные стоянки</a>
+            <p class="description services-item-description">Не следует, однако забывать, что начало повседневной работы
+              по формированию позиции</p>
+          </li>
+        </ul>
       </div>
     </section>
   </main>
