add section advantages

--- a/index.html
+++ b/index.html
@@ -129,6 +129,53 @@
         </ul>
       </div>
     </section>
+
+    <!-- Секция Преимущества -->
+    <section class="advantages">
+      <div class="container">
+        <h2 class="section-title">Преимущества</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <p class="advatages-item-description bathhub">Идейные соображения высшего порядка, а также постоянный
+              количественный
+              рост</p>
+          </li>
+          <li class="advantages-item ">
+            <p class="advatages-item-description hanger">Значимость этих проблем настолько очевидна, что вопрос остается
+              открытым</p>
+          </li>
+          <li class="advantages-item ">
+            <p class="advatages-item-description heating">Таким образом реализация плановых заданий играет важную роль
+              для
+              понимания</p>
+          </li>
+          <li class="advantages-item ">
+            <p class="advatages-item-description hotel-key">Повседневная практика показывает, что сложившаяся структура
+              организации</p>
+          </li>
+          <li class="advantages-item ">
+            <p class="advatages-item-description parking">Равным образом рамки и место обучения кадров способствует
+              подготовки
+              сотрудника</p>
+          </li>
+          <li class="advantages-item ">
+            <p class="advatages-item-description reception">Консультация с активом влечет за собой процесс внедрения
+              услуг нашего
+              сервиса </p>
+          </li>
+          <li class="advantages-item ">
+            <p class="advatages-item-description security-box">Повседневная практика показывает, что дальнейшее развитие
+              различных
+              форм</p>
+          </li>
+          <li class="advantages-item ">
+            <p class="advatages-item-description swimming-pool">Значимость этого настолько очевидна, что консультация
+              наших экспертов
+              помогает</p>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 </body>
 
