WIP. add section hotels

--- a/index.html
+++ b/index.html
@@ -176,6 +176,196 @@
         </ul>
       </div>
     </section>
+
+    <!-- Секция Размещение -->
+    <section class="hotels">
+      <div class="container">
+        <h2 class="section-title">Раземещение</h2>
+        <ul class="hotels-list">
+          <li class="hotels-list-item">
+            <article class="hotel-card">
+              <img class="hotel-image" src="" alt="">
+              <div class="hotel-description">
+                <div class="hotel-rate-price">
+                  <div class="hotel-price">
+                    от 4 698 р / ночь
+                  </div>
+                  <div class="hotel-rate">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                  </div>
+                </div>
+                <p class="hotel-info">Барселона, Испания</p>
+                <h3 class="hotel-title">Lagoona española</h3>
+                <a class="hotel-rooms" href="#"></a>
+              </div>
+            </article>
+          </li>
+          <li class="hotels-list-item">
+            <article class="hotel-card">
+              <img class="hotel-image" src="" alt="">
+              <div class="hotel-description">
+                <div class="hotel-rate-price">
+                  <div class="hotel-price">
+                    от 5 148 р / ночь
+                  </div>
+                  <div class="hotel-rate">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                  </div>
+                </div>
+                <p class="hotel-info">Барселона, Испания</p>
+                <h3 class="hotel-title">Lagoona son típicas</h3>
+                <a class="hotel-rooms" href="#"></a>
+              </div>
+            </article>
+          </li>
+          <li class="hotels-list-item">
+            <article class="hotel-card">
+              <img class="hotel-image" src="" alt="">
+              <div class="hotel-description">
+                <div class="hotel-rate-price">
+                  <div class="hotel-price">
+                    от 6 254 р / ночь
+                  </div>
+                  <div class="hotel-rate">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                  </div>
+                </div>
+                <p class="hotel-info">Барселона, Испания</p>
+                <h3 class="hotel-title">Lagoona de la guerra</h3>
+                <a class="hotel-rooms" href="#"></a>
+              </div>
+            </article>
+          </li>
+          <li class="hotels-list-item">
+            <article class="hotel-card">
+              <img class="hotel-image" src="" alt="">
+              <div class="hotel-description">
+                <div class="hotel-rate-price">
+                  <div class="hotel-price">
+                    от 6 320 р / ночь
+                  </div>
+                  <div class="hotel-rate">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                  </div>
+                </div>
+                <p class="hotel-info">Барселона, Испания</p>
+                <h3 class="hotel-title">Lagoona mentira piadosa</h3>
+                <a class="hotel-rooms" href="#"></a>
+              </div>
+            </article>
+          </li>
+          <li class="hotels-list-item">
+            <article class="hotel-card">
+              <img class="hotel-image" src="" alt="">
+              <div class="hotel-description">
+                <div class="hotel-rate-price">
+                  <div class="hotel-price">
+                    от 6 457 р / ночь
+                  </div>
+                  <div class="hotel-rate">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                  </div>
+                </div>
+                <p class="hotel-info">Барселона, Испания</p>
+                <h3 class="hotel-title">Lagoona empujar la creatividad</h3>
+                <a class="hotel-rooms" href="#"></a>
+              </div>
+            </article>
+          </li>
+          <li class="hotels-list-item">
+            <article class="hotel-card">
+              <img class="hotel-image" src="" alt="">
+              <div class="hotel-description">
+                <div class="hotel-rate-price">
+                  <div class="hotel-price">
+                    от 6 320 р / ночь
+                  </div>
+                  <div class="hotel-rate">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                  </div>
+                </div>
+                <p class="hotel-info">Барселона, Испания</p>
+                <h3 class="hotel-title">Lagoona el retorno</h3>
+                <a class="hotel-rooms" href="#"></a>
+              </div>
+            </article>
+          </li>
+          <li class="hotels-list-item">
+            <article class="hotel-card">
+              <img class="hotel-image" src="" alt="">
+              <div class="hotel-description">
+                <div class="hotel-rate-price">
+                  <div class="hotel-price">
+                    от 6 505 р / ночь
+                  </div>
+                  <div class="hotel-rate">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                  </div>
+                </div>
+                <p class="hotel-info">Барселона, Испания</p>
+                <h3 class="hotel-title">Lagoona mentira piadosa</h3>
+                <a class="hotel-rooms" href="#"></a>
+              </div>
+            </article>
+          </li>
+          <li class="hotels-list-item">
+            <article class="hotel-card">
+              <img class="hotel-image" src="" alt="">
+              <div class="hotel-description">
+                <div class="hotel-rate-price">
+                  <div class="hotel-price">
+                    от 6 824 р / ночь
+                  </div>
+                  <div class="hotel-rate">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                  </div>
+                </div>
+                <p class="hotel-info">Барселона, Испания</p>
+                <h3 class="hotel-title">Lagoona suerte siguió siempre</h3>
+                <a class="hotel-rooms" href="#"></a>
+              </div>
+            </article>
+          </li>
+          <li class="hotels-list-item">
+            <a class="hotel-more" href="#">Посмотреть все варианты</a>
+      </div>
+      </article>
+      </li>
+      </ul>
+      </div>
+    </section>
   </main>
 </body>
 
